--- a/src/App.scss
+++ b/src/App.scss
@@ -1,10 +1,11 @@
 .App {
   background-color: #f4f2ee;
-  // display: flex;
-  // flex-direction: column;
-  // align-items: center;
+  display: flex;
+    flex-direction: column;
+    align-items: center;
 
   &__body {
     display: flex;
+    margin: 35px 0 20px;
   }
 }
