--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -3,6 +3,7 @@
   justify-content: space-evenly;
   border-bottom: 0.1px solid lightgray;
   padding: 10px 0;
+  background-color: white;
   width: 100%;
   position: sticky;
   top: 0;
